Change filler character from 'F' to '™'

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ function insertWithBitmask() {
 
 // MODE: text kosong → bangun dari bitmask
 if (text.length === 0) {
-    const filler = 'F'; // nanti bisa diganti input user
+    const filler = '™'; // nanti bisa diganti input user
     const result = buildFromBitmaskWhenEmpty(
         bitmaskInput.value,
         char,
