--- a/02/index.html
+++ b/02/index.html
@@ -310,5 +310,18 @@
             });
         });
     </script>
+<!-- Contoh menggunakan Crisp -->
+<script type="text/javascript">
+  window.$crisp = [];
+  window.CRISP_WEBSITE_ID = "your-website-id";
+  (function () {
+      var d = document;
+      var s = d.createElement("script");
+      s.src = "https://client.crisp.chat/l.js";
+      s.async = 1;
+      d.getElementsByTagName("head")[0].appendChild(s);
+  })();
+</script>
+    
 </body>
 </html>
