Add Utterances comments section to teks.html

--- a/02/teks.html
+++ b/02/teks.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Halaman Contoh</title>
+</head>
+<body>
+  <h1>Halaman dengan Komentar</h1>
+  <p>Ini adalah contoh halaman dengan fitur komentar menggunakan Utterances.</p>
 
+  <!-- Tempat Komentar -->
+  <section id="comments">
+   <script src="https://utteranc.es/client.js"
+        repo="https://github.com/lasus023-jpg/00"
+        issue-term="pathname"
+        label="tesy kom"
+        theme="dark-blue"
+        crossorigin="anonymous"
+        async>
+   </script>
+  </section>
+</body>
+</html>
