--- a/02/teks.html
+++ b/02/teks.html
@@ -13,6 +13,7 @@
       line-height: 1.6;
       background-color: #f9f9f9;
       color: #333;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .container {
@@ -22,6 +23,7 @@
       background: white;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
+      transition: background-color 0.3s;
     }
 
     h1 {
@@ -32,33 +34,133 @@
     /* Kustomisasi Utterances */
     .utterances {
       margin-top: 30px;
-      border: 1px solid #ddd; /* Memberikan border untuk pembungkus */
-      border-radius: 8px; /* Sudut melengkung di pembungkus */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Tambahkan bayangan */
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .utterances-frame {
-      width: 100%; /* Supaya iframe menggunakan lebar penuh container */
-      border: none; /* Hilangkan border bawaan iframe */
-      border-radius: inherit; /* Ikuti radius pembungkus */
+      width: 100%;
+      border: none;
+      border-radius: inherit;
+    }
+
+    /* Tombol Mode Gelap/Terang */
+    .theme-switch {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .theme-switch button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border: 2px solid #333;
+      background: transparent;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .theme-switch button:hover {
+      background-color: #333;
+      color: #fff;
+    }
+
+    /* Gaya untuk Mode Gelap */
+    body.dark {
+      background-color: #1e1e1e;
+      color: #f1f1f1;
+    }
+
+    .container.dark {
+      background-color: #292929;
+    }
+
+    .theme-switch button.dark {
+      border: 2px solid #f1f1f1;
+      color: #f1f1f1;
+    }
+
+    .theme-switch button.dark:hover {
+      background-color: #f1f1f1;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="page-container">
     <h1>Hello, Utterances!</h1>
     <p>Ini adalah halaman dengan komentar menggunakan widget Utteranc.es. Anda dapat menambahkan komentar di bawah ini.</p>
 
-    <!-- Tambahkan widget Utteranc.es -->
+    <!-- Tombol untuk switch Tema -->
+    <div class="theme-switch">
+      <button id="theme-toggle" class="dark">🌙 Mode Gelap</button>
+    </div>
+
+    <!-- Tempat Komentar -->
     <section class="comments">
       <script src="https://utteranc.es/client.js"
-        repo="lasus023-jpg/00"
-        issue-term="url"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
+              repo="YOUR_USER/YOUR_REPO"
+              issue-term="pathname"
+              theme="github-light"
+              crossorigin="anonymous"
+              async>
       </script>
     </section>
   </div>
+
+  <script>
+    // Akses Elemen Dasar
+    const body = document.body;
+    const container = document.getElementById('page-container');
+    const themeToggle = document.getElementById('theme-toggle');
+
+    // Simpan Tema Widget
+    let currentTheme = 'github-light';
+
+    // Fungsi untuk Mengganti Tema
+    function switchTheme() {
+      const commentsSection = document.querySelector('.comments');
+      const oldScript = commentsSection.querySelector('script');
+
+      // Toggle antara Tema Gelap/Terang
+      if (currentTheme === 'github-light') {
+        body.classList.add('dark');
+        container.classList.add('dark');
+        themeToggle.classList.add('light');
+        themeToggle.textContent = '☀️ Mode Terang';
+
+        // Ubah tema Utterances ke github-dark
+        currentTheme = 'github-dark';
+      } else {
+        body.classList.remove('dark');
+        container.classList.remove('dark');
+        themeToggle.classList.remove('light');
+        themeToggle.textContent = '🌙 Mode Gelap';
+
+        // Ubah tema Utterances ke github-light
+        currentTheme = 'github-light';
+      }
+
+      // Ganti widget Utteranc.es dengan tema baru
+      const newScript = document.createElement('script');
+      newScript.src = 'https://utteranc.es/client.js';
+      newScript.setAttribute('repo', 'lasus023-jpg/00');
+      newScript.setAttribute('issue-term', 'pathname');
+      newScript.setAttribute('theme', currentTheme);
+      newScript.crossOrigin = 'anonymous';
+      newScript.async = true;
+
+      // Hapus Skrip Lama dan Tambahkan Skrip Baru
+      commentsSection.removeChild(oldScript);
+      commentsSection.appendChild(newScript);
+    }
+
+    // Tambahkan Event Listener untuk Tombol
+    themeToggle.addEventListener('click', switchTheme);
+  </script>
+
+  
 </body>
 </html>
