--- a/02/teks.html
+++ b/02/teks.html
@@ -101,7 +101,7 @@
     <!-- Tempat Komentar -->
     <section class="comments">
       <script src="https://utteranc.es/client.js"
-              repo="YOUR_USER/YOUR_REPO"
+              repo="lasus023-jpg/00"
               issue-term="pathname"
               theme="github-light"
               crossorigin="anonymous"
