Update button text and accordion item titles

--- a/02/frame.html
+++ b/02/frame.html
@@ -106,16 +106,16 @@
 <body>
     <!-- Tombol untuk switch Tema -->
     <div class="theme-switch">
-      <button id="theme-toggle" class="dark">🌙 Mode Gelap</button>
+      <button id="theme-toggle" class="dark"> Judul Buku🌙</button>
     </div>
 
-    <h4 class='m-5'>Accordion</h4>
+<!--    <h4 class='m-5'>Accordion</h4> -->
     <div class='container mb-5'>
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Accordion Item #1
+              Bab 1 - Accordion
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse hide" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -128,7 +128,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
+              Bab 2 - Akordion
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
