--- a/02/frame.html
+++ b/02/frame.html
@@ -180,7 +180,7 @@
         currentTheme = 'github-dark';
       } else {
         body.classList.remove('dark');
-        themeToggle.textContent = '🌙 Mode Gelap';
+        themeToggle.textContent = '🌙judul boekoe';
 
         // Ubah tema Utterances ke github-light
         currentTheme = 'github-light';
