Update theme toggle button text

--- a/02/frame.html
+++ b/02/frame.html
@@ -106,8 +106,9 @@
 <body>
     <!-- Tombol untuk switch Tema -->
     <div class="theme-switch">
-      <button id="theme-toggle" class="dark">🌙</button>
+      <button id="theme-toggle" class="dark">🌙 judul</button>
     </div>
+  <p></p>
 
 <!--    <h4 class='m-5'>Accordion</h4> -->
     <div class='container mb-5'>
