Change title from 'Kustomisasi Widget Utteranc.es' to 'Widget Utteranc'

--- a/02/frame.html
+++ b/02/frame.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kustomisasi Widget Utteranc.es</title>
+  <title>Widget Utteranc</title>
   <style>
     /* Style untuk tata letak halaman */
     body {
