--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
     }
 </style>
 
+    <!-- ... -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/@waline/client@v3/dist/waline.css"
+  />
+
 </head>
 <body>
 <div class="container">
@@ -405,5 +411,17 @@ bitmaskInput.value = '1010';
 charInput.value = '*';
 saveHistory();
 renderBitmaskVisual();
-</script></body>
+</script>
+
+    <div id="waline"></div>
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
+
+    init({
+      el: '#waline',
+      serverURL: 'https://comment9.vercel.app',
+      lang: 'en',
+    });
+
+</body>
 </html>
