--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
     </div>
 </div>
 
+    <div id="waline">test</div>
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
+
+    init({
+      el: '#waline',
+      serverURL: 'https://comment9.vercel.app',
+      lang: 'en',
+    });
+
 <footer>
     Aplikasi Penyusun Karakter © 2024 | Demo eksperimen bitmask
 </footer>
@@ -413,15 +423,7 @@ saveHistory();
 renderBitmaskVisual();
 </script>
 
-    <div id="waline"></div>
-  <script type="module">
-    import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
-
-    init({
-      el: '#waline',
-      serverURL: 'https://comment9.vercel.app',
-      lang: 'en',
-    });
+    
 
 </body>
 </html>
