--- a/frame.html
+++ b/frame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="id" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -105,12 +105,12 @@
 </head>
 <body>
     <!-- Tombol untuk switch Tema -->
-    <div class="theme-switch">
+    <div class="theme-switch" data-bs-theme="dark">
       <button id="theme-toggle" class="dark">🌙 Mode Gelap</button>
     </div>
 
     <h4 class='m-5'>Accordion</h4>
-    <div class='container mb-5'>
+    <div class='container mb-5' data-bs-theme="dark">
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header bg-dark text-white" id="headingOne">
