Update frame 2 accor.html

--- a/02/frame 2 accor.html
+++ b/02/frame 2 accor.html
@@ -115,6 +115,9 @@
   </script>
   
   -->
+
+
+  <script src="https://github.com/lasus023-jpg/00/blob/main/02/script.js"></script>
   
 </head>
 <body>
