--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </div>
 
     <div>
-        <a href="https://github.com/lasus023-jpg/00/blob/8f1e80f286305ab17b9cd0231d3fcf38d51ab333/decomposer.html">Decompose</a>
+        <a href="https://lasus023-jpg.github.io/00/blob/8f1e80f286305ab17b9cd0231d3fcf38d51ab333/decomposer.html">Decompose</a>
     </div>
 
 <!-- ... -->
