--- a/index.html
+++ b/index.html
@@ -291,5 +291,19 @@
     }
 </script>
 
+     <div id="waline"></div>
+<script type="module">
+  import { RecentComments } from 'https://cdn.jsdelivr.net/npm/@waline/client/dist/waline.mjs';
+
+  RecentComments({
+    serverURL: 'http://comment9.vercel.app',
+    count: 10,
+  }).then(({ comments }) => {
+    document.getElementById('waline-recent').innerHTML = comments.map(
+      (comment) => `${comment.nick}: ${comment.comment}`,
+    );
+  });
+</script>
+
 </body>
 </html>
