--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<head> <!-- ... --> <link rel="stylesheet" href="https://unpkg.com/@waline/client@v3/dist/waline.css" /> </head> <body> <!-- ... --> <div id="waline"></div> <script type="module"> import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js'; init({ el: '#waline', serverURL: 'https://comment9.vercel.app', lang: 'en', }); </script> </body>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Preview</title>
+<!-- ... -->
+  <link rel="stylesheet" href="https://unpkg.com/@waline/client@v3/dist/waline.css" /> 
+</head> 
+  <body> <!-- ... --> 
+    <div id="waline"></div> 
+    <script type="module"> import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js'; init({ el: '#waline', serverURL: 'https://comment9.vercel.app', lang: 'en', }); </script>
+  </body>
+</html>
