--- a/02/accor3-no-search.html
+++ b/02/accor3-no-search.html
@@ -652,7 +652,7 @@ document
 
 
     <!-- halaman Komentar -->
-    <section class="comments">
+  <!--  <section class="comments">
       <script src="https://utteranc.es/client.js"
               repo="lasus023-jpg/00"
               issue-term="pathname"
@@ -660,7 +660,7 @@ document
               crossorigin="anonymous"
               async>
       </script>
-    </section>
+    </section> -->
    
  
 
