--- a/02/accor3-no-search.html
+++ b/02/accor3-no-search.html
@@ -153,7 +153,8 @@ body.dark mark {
 
 <body>
     
-    <h3 align="center">Ubah judul header</h3>
+    <h3 align="center" data-bs-toggle="modal"
+        data-bs-target="#judi">Ubah judul header</h3>
     
    
    
