--- a/02/accor3-no-search.html
+++ b/02/accor3-no-search.html
@@ -22,7 +22,7 @@
       padding: 0;
       line-height: 1.6;
        /* background-color: #f9f9f9; */
-      color: #333;
+      color: #f3aa00;
       transition: background-color 0.3s, color 0.3s;
     }
 
