--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <div class="container">
     <div class="header">
         <h2 data-bs-toggle="modal"
-        data-bs-target="#commentModal">Bitplacer Text</h2><p>
+        data-bs-target="#commentModal">Bitmask Overwrite</h2><p>
         <button class="theme-toggle" onclick="toggleTheme()">Mode</button></p>
         
         
