--- a/02/accor3-no-search.html
+++ b/02/accor3-no-search.html
@@ -164,7 +164,7 @@ body.dark mark {
 <body>
     
     <h3 align="center" data-bs-toggle="modal"
-        data-bs-target="#judi">Ubah judul header</h3>
+        data-bs-target="#judi">Webnovel</h3>
     
    
    
@@ -285,7 +285,7 @@ body.dark mark {
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title">💬 Komentar</h5>
+        <h5 class="modal-title"><i class="bi bi-github"></i> Komentar</h5>
         <button type="button"
                 class="btn-close"
                 data-bs-dismiss="modal"
